[package]
name = "pi6eon"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
curve25519-dalek = "4.1.3"
hex = "0.4.3"
rand_core = "0.6.4"
sha256 = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
x25519-dalek = { version = "2", features = ["getrandom"] }
